Bug 1324780 - Cherry-pick commit 1c98ff87c76536553e53c131e75aba33033ee3a0 from upstream harfbuzz, to fix build failure with older glib. r=jrmuizel a=jcristau